--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <!-- PDF Item 1: Cover -->
-        <img src="your-photo.jpg" alt="A professional photo of you" class="profile-photo">
+        <img src="your-photoe.jpg" alt="A professional photo of you" class="profile-photo">
         <h1>Your Name</h1>
         <h2>Your Professional Title (e.g., Full-Stack Developer)</h2>
     </header>
