--- a/index.html
+++ b/index.html
@@ -3,44 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Your Title</title>
+    <title>Mohamed Nabil Seddik - Data Analyst || Aerospace Engineer </title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
         <!-- PDF Item 1: Cover -->
-        <img src="your-photo.jpg" alt="A professional photo of you" class="profile-photo">
-        <h1>Your Name</h1>
-        <h2>Your Professional Title (e.g., Full-Stack Developer)</h2>
+        <img src="personalphoto.jpg" alt="Smiling into the abyss" class="profile-photo">
+        <h1>Mohamed Nabil Seddik</h1>
+        <h2>Data Analyst || Aerospace Engineer</h2>
     </header>
 
     <main>
         <!-- PDF Item 2: About & USP -->
         <section id="about">
-            <h3>About Me</h3>
-            <p>This is where you write your compelling 2-3 paragraph bio. Start with your USP. Explain your passion, your expertise, and how you help clients or employers succeed.</p>
+            <p>Hi! I'm Mohamed Nabil, a junior data analyst specializing in aerospace specific applications based in Cairo. I am the creator of Course planner, an online course planner to aid Cairo university students to cultivate their study plans.</p>
+            <p>I love looking for the hidden stories that the numbers never tell at a glance. I can help produce top level dashboards from complex datasets quickly as well as offering some web development skills if needed.</p>
+            <p>Recently, I joined the UDC Lab where I'm aiding with the avionics and propulsion system of a Crop Duster UAV. I am gaining many skills such as Arduino, eCalc, XFLR5, AVL.</p>
+            <p>As a highschool student, I studied 4 ALevel subjects with scores A*AAB while the required number is only 1 subject. I also achieved a perfect 100% score in 8 OLevel subjects.</p>
         </section>
 
         <!-- PDF Item 5: Work Experience -->
         <section id="experience">
-            <h3>Experience</h3>
-            <p><strong>Current Role</strong> at Company, 2022-Present</p>
-            <p><strong>Past Role</strong> at Company, 2020-2022</p>
+            <h2>Experience</h2>
+            <p><strong>UDC 2025 Participant</strong> at UDC - Cairo University, July 2025 - Present</p>
+            <p><strong>Data Analyst in Training</strong> at DEPI, June 2025 - Present</p>
+            <p><strong>Physics IGCSE Teaching Assistant</strong> with Hussein Khaled, January 2024 - June 2025</p>
+
         </section>
         
         <!-- PDF Item 3: Education -->
         <section id="education">
-            <h3>Education</h3>
-            <p><strong>B.S. in Computer Science</strong>, University Name, 2020</p>
+            <h2>Education</h2>
+            <p><strong>B.S. in Aerospace Engineering</strong>, Cairo University, Expected May 2028</p>
+            <p><strong>IGCSE & ALevel Certificate</strong>, New Ramses College, June 2024</p>
+
         </section>
 
         <!-- PDF Item 4: Skills -->
         <section id="skills">
             <h3>Skills</h3>
             <ul>
-                <li>JavaScript (React, Node.js)</li>
-                <li>Python (Django, Flask)</li>
-                <li>UI/UX Design (Figma)</li>
+                <li>PowerBI (Power Query, DAX)</li>
+                <li>MATLAB (Simulink, matlib)</li>
+                <li>Solidworks, AVL</li>
             </ul>
         </section>
 
@@ -52,9 +58,9 @@
 
     <footer>
         <!-- PDF Item 10: Contact Info -->
-        <a href="mailto:youremail@example.com">Email</a> |
-        <a href="https://linkedin.com/in/yourprofile">LinkedIn</a> |
-        <a href="https://github.com/your-username">GitHub</a>
+        <a href="mailto:mohamed.nabil.seddik@gmail.com">Email</a> |
+        <a href="https://www.linkedin.com/in/mohamed-nabil-seddik/">LinkedIn</a> |
+        <a href="https://github.com/sleeplessmo">GitHub</a>
     </footer>
 </body>
 </html>
