--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio - Your Name</title>
+    <title>Portfolio - Mohamed Nabil</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -17,41 +17,40 @@
     <main>
         <!-- PDF Item 6: Offered Services -->
         <section id="services">
-            <p>I specialize in creating modern, responsive websites and powerful web applications. Below are examples of my work.</p>
+            <p>I specialize in building robust data models and dashboards. Here are some projects I'm proud of.</p>
         </section>
 
         <!-- PDF Item 7: Projects -->
         <section class="project-grid">
             <!-- Project 1 -->
             <div class="project-card">
-                <img src="project1-image.jpg" alt="Screenshot of Project 1">
-                <h3>Project Title 1</h3>
-                <p>A short, engaging description of the project, your role, and the technologies used.</p>
+                <img src="CoursePlanner.jpg" alt="Course Planner Homepage">
+                <h3> Faculty of Engineering Course Planner</h3>
+                <p>Webpage for Cairo University students to create personalized course plans, calculate their GPA and find useful study resources.</p>
                 <!-- Optional: Testimonial -->
-                <blockquote>"Working with them was fantastic!" - Happy Client</blockquote>
+                <blockquote>"Most helpful tool I've used, thank you!" - Sara Alaa</blockquote>
             </div>
             <!-- Project 2 -->
             <div class="project-card">
-                <img src="project2-image.jpg" alt="Screenshot of Project 2">
-                <h3>Project Title 2</h3>
-                <p>Another description. Focus on the problem you solved or the value you created.</p>
+                <img src="sample%20wing%20and%20tail%20design.jpg" alt="Sample Wing & Tail">
+                <h3>DBF Aircraft</h3>
+                <p>Designing Aircraft while managing avionics as well as an optimum, realistic propulsion system. Our team designed a mathematical model using Simulink. It calculates thrust and torque. </p>
             </div>
             <!-- Add more project cards as needed -->
         </section>
         
         <!-- PDF Item 9: Testimonials (if not on cards) -->
         <section id="testimonials">
-            <h3>What Clients Say</h3>
-            <p>"A dedicated professional who delivers results." - Client Name</p>
+            <h3></h3>
         </section>
     </main>
 
     <footer>
         <!-- PDF Item 10: Final CTA & Contact -->
-        <h3>Interested in collaborating?</h3>
+        <h3>Contact</h3>
         <p>Let's connect! I'm currently available for freelance opportunities.</p>
-        <a href="mailto:youremail@example.com">Email Me</a> |
-        <a href="https://linkedin.com/in/yourprofile">Find me on LinkedIn</a>
+        <a href="mailto:mohamed.nabil.seddik@gmail.com">Email Me</a> |
+        <a href="https://www.linkedin.com/in/mohamed-nabil-seddik/">Find me on LinkedIn</a>
     </footer>
 </body>
 </html>
