--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main>
         <!-- PDF Item 2: About & USP -->
         <section id="about">
-            <p>Hi! I'm Mohamed Nabil, a junior data analyst specializing in aerospace specific applications based in Cairo. I am the creator of Course planner, an online course planner to aid Cairo university students to cultivate their study plans.</p>
+            <p>Hi! I'm Mohamed Nabil, a junior data analyst specializing in aerospace specific applications based in Cairo. I am the creator of <a href="https://eeeeeeefe.github.io/" target="_blank" rel="noopener noreferrer">Course planner</a>, an online course planner to aid Cairo university students to cultivate their study plans.</p>
             <p>I love looking for the hidden stories that the numbers never tell at a glance. I can help produce top level dashboards from complex datasets quickly as well as offering some web development skills if needed.</p>
             <p>Recently, I joined the UDC Lab where I'm aiding with the avionics and propulsion system of a Crop Duster UAV. I am gaining many skills such as Arduino, eCalc, XFLR5, AVL.</p>
             <p>As a highschool student, I studied 4 ALevel subjects with scores A*AAB while the required number is only 1 subject. I also achieved a perfect 100% score in 8 OLevel subjects.</p>
