--- a/index.html
+++ b/index.html
@@ -7,8 +7,17 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <!-- PDF Item 1: Cover -->
+    <nav class="top-nav">
+        <div class="logo">
+            <a href="index.html">Mohamed Nabil Seddik</a>
+        </div>
+        <ul class="nav-links">
+            <li><a href="index.html" class="active">About</a></li>
+            <li><a href="portfolio.html">My Work</a></li>
+        </ul>
+    </nav>
+
+    <header class="page-header">
         <img src="personalphoto.jpg" alt="Smiling into the abyss" class="profile-photo">
         <h1>Mohamed Nabil Seddik</h1>
         <h2>Data Analyst || Aerospace Engineer</h2>
@@ -51,9 +60,7 @@
         </section>
 
         <!-- PDF Item 10: Call to Action -->
-        <section id="cta">
-            <a href="portfolio.html" class="button">View My Work</a>
-        </section>
+
     </main>
 
     <footer>
