--- a/portfolio.html
+++ b/portfolio.html
@@ -7,11 +7,18 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
+    <nav class="top-nav">
+        <div class="logo">
+            <a href="index.html">Mohamed Nabil Seddik</a>
+        </div>
+        <ul class="nav-links">
+            <li><a href="index.html">About</a></li>
+            <li><a href="portfolio.html" class="active">My Work</a></li>
+        </ul>
+    </nav>
+
+    <header class="page-header-portfolio">
         <h1>My Work & Projects</h1>
-        <nav>
-            <a href="index.html">← Back to About Me</a>
-        </nav>
     </header>
 
     <main>
