--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
     <main>
         <!-- PDF Item 6: Offered Services -->
         <section id="services">
-            <p>I specialize in building robust data models and dashboards. Here are some projects I'm proud of.</p>
+            <p>I specialize in building robust data models and dashboards. Here are some projects I'm proud of:</p>
         </section>
 
         <!-- PDF Item 7: Projects -->
