--- a/portfolio.html
+++ b/portfolio.html
@@ -30,13 +30,16 @@
         <!-- PDF Item 7: Projects -->
         <section class="project-grid">
             <!-- Project 1 -->
-            <div class="project-card">
-                <img src="CoursePlanner.jpg" alt="Course Planner Homepage">
-                <h3> Faculty of Engineering Course Planner</h3>
-                <p>Webpage for Cairo University students to create personalized course plans, calculate their GPA and find useful study resources.</p>
-                <!-- Optional: Testimonial -->
-                <blockquote>"Most helpful tool I've used, thank you!" - Sara Alaa</blockquote>
-            </div>
+            <!-- Project 1 -->
+            <a href="https://eeeeeeefe.github.io/" target="_blank" rel="noopener noreferrer" class="project-link-card">
+                <div class="project-card">
+                    <img src="CoursePlanner.jpg" alt="Course Planner Homepage">
+                    <h3> Faculty of Engineering Course Planner</h3>
+                    <p>Webpage for Cairo University students to create personalized course plans, calculate their GPA and find useful study resources.</p>
+                    <!-- Optional: Testimonial -->
+                    <blockquote>"Most helpful tool I've used, thank you!" - Sara Alaa</blockquote>
+                </div>
+            </a>
             <!-- Project 2 -->
             <div class="project-card">
                 <img src="sample%20wing%20and%20tail%20design.jpg" alt="Sample Wing & Tail">
