--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mohamed Nabil Seddik - Data Analyst || Aerospace Engineer </title>
     <link rel="stylesheet" href="css/style.css">
+    <!-- Add this line below -->
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="323b3fe3-eec3-4e4a-...."></script>
 </head>
+
 <body>
     <nav class="top-nav">
         <div class="logo">
