--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Mohamed Nabil Seddik - Data Analyst || Aerospace Engineer </title>
     <link rel="stylesheet" href="css/style.css">
     <!-- Add this line below -->
-    <script defer src="https://cloud.umami.is/script.js" data-website-id="323b3fe3-eec3-4e4a-bfa1-0f0540a9233c"></script></head>
-
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="323b3fe3-eec3-4e4a-bfa1-0f0540a9233c"></script>
 <body>
     <nav class="top-nav">
         <div class="logo">
