--- a/portfolio.html
+++ b/portfolio.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Mohamed Nabil</title>
     <link rel="stylesheet" href="css/style.css">
-    <script defer src="https://cloud.umami.is/script.js" data-website-id="323b3fe3-eec3-4e4a-bfa1-0f0540a9233c"></script></head>
-<body>
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="323b3fe3-eec3-4e4a-bfa1-0f0540a9233c"></script><body>
     <nav class="top-nav">
         <div class="logo">
             <a href="index.html">Mohamed Nabil Seddik</a>
